# pgn-analyzeV2

move-classifier/: .gitignore  ADVANCED_EXAMPLES_IMPLEMENTATION.md  BASIC_CLASSIFICATIONS.md  BUGFIXES_SUMMARY.md  CLASSIFICATION_ANALYSIS.md  DANGER_LEVELS.md  DEBUG_INSTRUCTIONS.md  FINAL_TEST_SUMMARY.md  HISTORICAL_GAMES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  JAVASCRIPT_ALIGNMENT.md  MISMATCH_ANALYSIS.md  PREPROCESSING.md  QUICKSTART.md  README.md  REAL_ENGINE_INTEGRATION.md  SUMMARY_OF_CHANGES.md  TACTICAL_UTILITIES.md  TEST_RESULTS.md  capablanca.json  capablanca_marshall_1918.pgn  custom_output.txt  demo_basic_classifications.py  demo_checkmate_fallback.py  example.pgn  example_preprocessing.py  main.py  morphy.json  morphy_RESTORED_WITH_MULTIPV_multipv2_depth16.json  morphy_SIMPLIFIED_multipv2_depth16.json  morphy_analysis.txt  morphy_output.txt  pyproject.toml  requirements.txt  setup.py  visualize_capablanca_nodes.py  visualize_game.py
move-classifier/architecture/: 01-core-concepts.md  02-classification-overview.md  03-basic-classifications.md  05-advanced-classifications.md  09-data-structures.md  10-constants-config.md  NAVIGATION.md  README.md
move-classifier/docs/: PREPROCESSING_PIPELINE_ALIGNMENT.md
move-classifier/docs/architecture/: 00-preprocessing-pipeline.md  01-core-concepts.md  02-classification-overview.md  04-point-loss-classification.md  06-attack-defense.md  07-tactical-analysis.md  08-utilities.md  NAVIGATION.md  README.md
move-classifier/docs/implementation-notes/: BRILLIANT_CLASSIFICATION.md  CHECKMATE_CLASSIFICATION_FIX.md  CLASSIFIER_IMPLEMENTATION.md  CRITICAL_CLASSIFICATION.md  EXPECTED_POINTS_JS_ALIGNMENT.md  MISSED_OPPORTUNITY.md  README.md  VISUALIZATION_GUIDE.md
move-classifier/src/: __init__.py  analyzer.py  config.py  constants.py
move-classifier/src/analysis/: __init__.py  attackers.py  danger_levels.py  defenders.py  expected_points.py  material.py  piece_safety.py  trapped_pieces.py
move-classifier/tests/: README.md  TEST_07_SUMMARY.md  __init__.py  conftest.py  run_all_tests.py  run_debug_test.sh  test_01_imports.py  test_02_core_data_structures.py  test_03_formulas.py  test_04_classification_logic.py  test_05_pgn_parsing.py  test_06_documented_examples.py  test_07_advanced_examples.py  test_mismatch_debug.py
(+76 files in other folders)
